// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book when component renders without authors 1`] = `
<div
  className="book"
>
  <div
    className="book-top"
  >
    <div
      className="book-cover"
      style={
        Object {
          "backgroundImage": "url(\\"http://books.google.com/books/content?id=nggnmAEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api\\")",
          "height": 193,
          "width": 128,
        }
      }
    />
    <div
      className="book-shelf-changer"
    >
      <select
        onChange={[Function]}
        value={undefined}
      >
        <option
          disabled={true}
          value="move"
        >
          Move to...
        </option>
        <option
          defaultValue={false}
          value="currentlyReading"
        >
          Currently Reading
        </option>
        <option
          defaultValue={false}
          value="wantToRead"
        >
          Want to Read
        </option>
        <option
          defaultValue={false}
          value="read"
        >
          Read
        </option>
        <option
          defaultValue={false}
          value="none"
        >
          None
        </option>
      </select>
    </div>
  </div>
  <div
    className="book-title"
  >
    lala
  </div>
</div>
`;

exports[`Book when component renders without crashing 1`] = `
<div
  className="book"
>
  <div
    className="book-top"
  >
    <div
      className="book-cover"
      style={
        Object {
          "backgroundImage": "url(\\"http://books.google.com/books/content?id=nggnmAEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api\\")",
          "height": 193,
          "width": 128,
        }
      }
    />
    <div
      className="book-shelf-changer"
    >
      <select
        onChange={[Function]}
        value="currentlyReading"
      >
        <option
          disabled={true}
          value="move"
        >
          Move to...
        </option>
        <option
          defaultValue={true}
          value="currentlyReading"
        >
          Currently Reading
        </option>
        <option
          defaultValue={false}
          value="wantToRead"
        >
          Want to Read
        </option>
        <option
          defaultValue={false}
          value="read"
        >
          Read
        </option>
        <option
          defaultValue={false}
          value="none"
        >
          None
        </option>
      </select>
    </div>
  </div>
  <div
    className="book-title"
  >
    The Linux Command Line
  </div>
  <div
    className="book-authors"
  >
    William E. Shotts, Jr.
  </div>
</div>
`;

exports[`Book when component renders without imageLinks 1`] = `
<div
  className="book"
>
  <div
    className="book-top"
  >
    <div
      className="book-shelf-changer"
    >
      <select
        onChange={[Function]}
        value={undefined}
      >
        <option
          disabled={true}
          value="move"
        >
          Move to...
        </option>
        <option
          defaultValue={false}
          value="currentlyReading"
        >
          Currently Reading
        </option>
        <option
          defaultValue={false}
          value="wantToRead"
        >
          Want to Read
        </option>
        <option
          defaultValue={false}
          value="read"
        >
          Read
        </option>
        <option
          defaultValue={false}
          value="none"
        >
          None
        </option>
      </select>
    </div>
  </div>
  <div
    className="book-title"
  >
    lala
  </div>
  <div
    className="book-authors"
  >
    William E. Shotts, Jr.
  </div>
</div>
`;
